# mycpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/mycpp/: CMakeLists.txt  Dummy.cpp  Dummy.h  DummyTest.cpp  Main.cpp
